<resources>
    <string name="app_name">School App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Strings related to the main activity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_main">College of CoICT</string>
    <string name="nav_header_subtitle_main">2017-04-06844</string>
    <string name="nav_header_desc_main">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_main">Home</string>
    <string name="menu_course_results_main">Course Results</string>
    <string name="menu_course_registered_main">Course registered</string>
    <string name="menu_profile_main">Profile</string>
    <string name="menu_share_main">Share</string>
    <string name="menu_send_main">Send</string>


    <string name="student_name">Swai Chinaa A</string>
    <string name="title_activity_staff">StaffActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--<string name="register_course">Register course</string>
    <string name="course_results">Course results</string>
    <string name="accomodation">Accommodation</string>-->
</resources>
